# ai-cli

./: CODE_REVIEW_REPORT.md  DECISIONS.md  DEVELOPER_HANDOFF.md  PLAN.md  PROJECT_REPORT.md  README.md  cli.py  project.md  pyproject.toml
.cursor/rules/: jj.mdc
.opencode/: implementation-complete.md  initial-notes.md
src/: cli.py
src/agent/: __init__.py  engine.py  providers.py  state.py
src/ai_cli/: __init__.py  cli.py
src/ai_cli/core/: blacklist.py  context.py  models.py  sandbox.py
src/ai_cli/usecases/: ask.py
src/ai_cli/utils/: render.py
src/core/: blacklist.py  context.py  models.py  sandbox.py
src/llm/: openai_provider.py  provider.py
src/tools/: __init__.py  base.py  filesystem.py  todo.py
src/usecases/: agentic_task.py  ask.py  task.py  testwrite.py
src/utils/: fs.py  render.py
tests/: test_agent.py  test_agentic_task.py  test_ask.py  test_blacklist.py  test_context.py  test_fs.py  test_integration.py  test_provider.py  test_renderer.py  test_sandbox.py  test_task.py  test_testwrite.py  test_tools.py
